@@ -7,9 +7,9 @@
     When revising a translation, copy the CVS Revision number from the
     original source file.  !-->
 
-<title>LilyPond - on Microsoft Windows</title>
+<title>LilyPond - on Cygwin under Microsoft Windows</title>
 
-<h1>LilyPond on Microsoft Windows</h1>
+<h1>LilyPond on Cygwin under Microsoft Windows</h1>
 
 
 <a name="installing"></a>
